fix: add hover on collapsed

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -34,6 +34,17 @@
   align-items: center;
   height: 40px;
   cursor: pointer;
+  color: #9ac9d6;
+
+  &:hover {
+    background-color: #00546a;
+    color: #ffffff;
+    border-radius: 5px;
+  }
+
+  &__label {
+    margin-right: 30px;
+  }
 }
 
 .hub-sidebar-footer.collapsed {
